fixed navbar menu not working on mobile

--- a/style.css
+++ b/style.css
@@ -232,6 +232,16 @@ html[data-theme="light"] .navbar {
     color: var(--color-font-light);
 }
 
+#sidebarContent {
+    padding-top: 20px;
+    position: fixed;
+    top: 50px;
+    left: 0;
+    background-color: #1e1e1e;
+    border-bottom: 1px solid #4c4c4c;
+    overflow-y: hidden;
+}
+
  /* -------------------------------------Cambia el color del icono hamburguesa a gris claro------------------------------------- */
 html[data-theme="dark"] .navbar-toggler-icon{
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(169, 169, 169, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
